# gaudi-connection

./: .gitignore  README.md  connectivity_HLS2.csv  connectivity_test.csv  debug_infiniband_ports.py  example_factory_usage.py  export.json  gaudi2_connect.py  gaudi_devices.py  infiniband_devices.py  main_gc.py  minimal_vendor_test.py  perf_test  pyproject.toml  run_gc.sh  setup.py  setup_uv.sh  simple_factory_test.py  simple_ib_debug.py  test_factory.py  test_rdma_compatibility.py
.uv/: config.toml
gaudi_connect/: __init__.py  connection_test_main.py
gaudi_connect/connectivity/: GaudiRouting.py  __init__.py  gaudi2_connect.py
gaudi_connect/devices/: GaudiDeviceFactory.py  GaudiDevices.py  InfinibandDevices.py  __init__.py  gaudi_devices.py  infiniband_devices.py
src/: connection.py
src/connectivity/: GaudiRouting.py  RunConnection.py
src/devices/: GaudiDeviceFactory.py  GaudiDevices.py  InfinibandDevices.py
src/runner/: AsyncPerfRunner.py  PerfRunner.py
testconnect/: TestConnection.py
tests/: conftest.py
tests/unit/: test_main_gc.py  test_port_connection.py
tests/unit/connectivity/: test_gaudi_routing.py  test_run_connection.py
tests/unit/devices/: test_gaudi_device_factory.py
