[project]
name = "gaudi-connection"
version = "0.1.0"
description = "A tool for reporting connectivity between Gaudi devices in an HLS2 system"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Proprietary"}
authors = [
    {name = "Gaudi Team"}
]

dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.venv.bootstrap"

[tool.uv]
# UV-specific configuration
exclude = ["tests", "perf_test"]
